--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - WhiteWater Rafting </title>
-    <meta name="description" content="My name is Belen Contana, this page is for my web development course, to learn and practice how to design a web site.">
+    <meta name="description" content="This section page is to know more abouts us.">
     <meta name="author" content="Belen Contana">
 
     <link rel="stylesheet" href="styles/rafting.css">
@@ -82,6 +82,9 @@
     </main>
     <footer>
         <p>&copy;2024 WhiteWater Rafting | Belén Contana</p>
+        <nav class="wireframe">
+            <a href="https://app.moqups.com/5J8KPA2WYA0Qhnd51BphicPfUTWYG1ya/view/page/af47520eb?fit_width=1">Page Wireframe</a>
+        </nav>
         <nav class="sociallinks">
             <a href="https://facebook.com"><img src="images/facebook.svg" alt="Facebook" width="30"></a>
             <a href="https://twitter.com"><img src="images/twitter.svg" alt="Twitter" width="30"></a>
