--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - WhiteWater Rafting</title>
-    <meta name="description" content="This page is for my web development course.">
+    <meta name="description" content="This page section is to contact with us to reach more info.">
     <meta name="author" content="Belen Contana">
 
     <link rel="stylesheet" href="styles/rafting.css">
@@ -14,8 +14,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-
-    <link rel="wireframe" href="https://app.moqups.com/5J8KPA2WYA0Qhnd51BphicPfUTWYG1ya/view/page/ad12de680">
 
 </head>
 <body>
@@ -115,6 +113,9 @@
     </main>
     <footer>
         <p>&copy;2024 WhiteWater Rafting | Belén Contana</p>
+        <nav class="wireframe">
+            <a href="https://app.moqups.com/5J8KPA2WYA0Qhnd51BphicPfUTWYG1ya/view/page/ad12de680?fit_width=1">Page Wireframe</a>
+        </nav>
         <nav class="sociallinks">
             <a href="https://facebook.com"><img src="images/facebook.svg" alt="Facebook" width="30"></a>
             <a href="https://twitter.com"><img src="images/twitter.svg" alt="Twitter" width="30"></a>
