--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trips</title>
-    <meta name="description" content="My name is Belen Contana, this page is for my web development course, to learn and practice how to design a web site.">
+    <meta name="description" content="This page section is to reserve your place in some of our available trips.">
     <meta name="author" content="Belen Contana">
 
     <link rel="stylesheet" href="styles/rafting.css">
@@ -30,51 +30,71 @@
         <section class="trip-list">
             <div class="trip-item">
                 <div class="trip-date">
+                    <span class="month">JUN</span>
+                    <span class="day">28</span>
+                </div>
+                <div class="trip-details">
+                    <h2>Middle Fork | South Fork American River Chili Bar Combo – 2 Days</h2>
+                    <p>Combine a thrilling Middle Fork American River trip with a splashy, fun South Fork American River Chili Bar rafting trip for a 2-day California rafting adventure in the heart of scenic Gold Country.</p>
+                    <p><strong>Location:</strong> California</p>
+                    <p><strong>Date:</strong> June 28, 2024 – June 29, 2024</p>
+                    <p><strong>From:</strong> $799</p>
+                    <a href="#" class="CTA">Book Now</a>
+                    <a href="#" class="CTA-secondary">View Details</a>
+                </div>
+                <div class="trip-image">
+                    <img src="images/trips4-le-lauzet-ubaye.jpg" alt="rafting adventure">
+                </div>
+            </div>
+            <div class="trip-item">
+                <div class="trip-date">
                     <span class="month">JUL</span>
                     <span class="day">18</span>
                 </div>
                 <div class="trip-details">
                     <h2>Craft Beer Tasting on the Tuolumne River – 2 Days</h2>
-                    <p>Join OARS and Sierra Nevada Brewing Co. for two days of whitewater fun and delicious craft brews on this adults-only Tuolumne River trip</p>
+                    <p>Join WhiteWater and Sierra Nevada Brewing Co. for two days of whitewater fun and delicious craft brews on this adults-only Tuolumne River trip</p>
                     <p><strong>Location:</strong> California</p>
                     <p><strong>Date:</strong> July 18, 2024 – July 19, 2024</p>
                     <p><strong>From:</strong> $699</p>
                     <a href="#" class="CTA">Book Now</a>
-                    <a href="#" class="CTA">View Details</a>
+                    <a href="#" class="CTA-secondary">View Details</a>
                 </div>
                 <div class="trip-image">
-                    <img src="craft-beer.jpg" alt="Craft Beer Tasting">
+                    <img src="images/rafting-adventure-9.jpg" alt="rafting adventure ">
                 </div>
             </div>
-
             <div class="trip-item">
                 <div class="trip-date">
                     <span class="month">AUG</span>
                     <span class="day">20</span>
                 </div>
                 <div class="trip-details">
-                    <h2>Craft Beer Tasting on the Tuolumne River – 3 Days</h2>
-                    <p>Join OARS and Sierra Nevada Brewing Co. for three days of whitewater fun and delicious craft brews on this adults-only Tuolumne River trip</p>
+                    <h2>Adventure on the Main Salmon River – 3 Days</h2>
+                    <p>Join WhiteWater for Class III whitewater fun on our adults-only Main Salmon River trip on the River of No Return</p>
                     <p><strong>Location:</strong> California</p>
                     <p><strong>Date:</strong> August 20, 2024 – August 22, 2024</p>
                     <p><strong>From:</strong> $899</p>
                     <a href="#" class="CTA">Book Now</a>
-                    <a href="#" class="CTA">View Details</a>
+                    <a href="#" class="CTA-secondary">View Details</a>
                 </div>
                 <div class="trip-image">
-                    <img src="craft-beer.jpg" alt="Craft Beer Tasting">
+                    <img src="images/rafting-adventure-11.jpg" alt="rafting adventure">
                 </div>
             </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Rafting Adventures. All Rights Reserved.</p>
-        <div class="sociallinks">
-            <a href="#">Facebook</a>
-            <a href="#">Twitter</a>
-            <a href="#">Instagram</a>
-        </div>
+        <p>&copy;2024 WhiteWater Rafting | Belén Contana</p>
+        <nav class="wireframe">
+            <a href="https://app.moqups.com/5J8KPA2WYA0Qhnd51BphicPfUTWYG1ya/view/page/acc89e031?fit_width=1">Page Wireframe</a>
+        </nav>
+        <nav class="sociallinks">
+            <a href="https://facebook.com"><img src="images/facebook.svg" alt="Facebook" width="30"></a>
+            <a href="https://twitter.com"><img src="images/twitter.svg" alt="Twitter" width="30"></a>
+            <a href="https://instagram.com"><img src="images/instagram.svg" alt="Instagram" width="30"></a>
+        </nav>   
     </footer>
 </body>
 </html>
